@@ -358,7 +358,7 @@ void init_rpm(void)
     REGISTER_ENUM(RPMSENSE_LESS);
     REGISTER_ENUM(RPMSENSE_GREATER);
     REGISTER_ENUM(RPMSENSE_EQUAL);
-    REGISTER_ENUM(RPMSENSE_PREREQ);
+    REGISTER_ENUM(RPMSENSE_NOTEQUAL);
 
     REGISTER_ENUM(RPMDEPS_FLAG_NOUPGRADE);
     REGISTER_ENUM(RPMDEPS_FLAG_NOREQUIRES);
